# Datatalks-ML-Zoomcamp-2025-Midterm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasklist.md
notebooks/: notebook.ipynb
src/: predict.py  train.py
tests/: test_client.py
